<resources>
    <string name="app_name">DubDex</string>
    <string name="description">description:</string>
    <string name="pokemon_image">pokémon image</string>
    <string name="abilities">abilities:</string>
    <string name="or">or</string>
    <string name="hidden">hidden:</string>
    <string name="base_stats">base stats:</string>
    <string name="download_data">Download Data</string>
    <string name="search">SEARCH</string>
    <string name="sort_by">SORT BY…</string>
    <string name="order">ascending/descending</string>
    <string name="national_number">national number</string>
    <string name="alphabetical">alphabetical</string>
    <string name="hp">hp</string>
    <string name="attack">attack</string>
    <string name="defense">defense</string>
    <string name="special_attack">special attack</string>
    <string name="special_defense">special defense</string>
    <string name="speed">speed</string>
    <string name="ascending">ascending</string>
    <string name="apply">apply</string>
    <string name="total">total</string>
    <string name="evolution_chains">Evolution Chains</string>
    <string name="evolution_chain">evolution chain:</string>
    <string name="search_hint">Enter Name or Number</string>
    <string name="downloading">Downloading…</string>
    <string name="adding_evolutions">Adding Evolutions…</string>
    <string name="empty" />
    <string name="about">ABOUT</string>
    <string name="copyright_statement">DubDex is an unofficial, fan made
        app and is not affiliated, endorsed, or supported by Nintendo,
        Game Freak, or The Pokémon Company. Some of the images used in
        this app are copyrighted and are supported under fair use.
        Pokémon and Pokémon character names are trademarks of Nintendo.
        No copyright infringement intended.\n\nAll Pokémon information used in this application was
        created using pokeapi.co</string>
    <string name="legal">legal</string>
    <string name="version_1.0">1.0.7</string>
    <string name="version_information">version information</string>
    <string name="features">features</string>
    <string name="version_1.0_information">-scrollable national dex of all 1025 pokémon species.
        \n\n-internet connection required for image loading.\n\n-instantly search for a pokémon by
        name or number.\n\n-sort the dex in ascending or descending order using various pokémon
        statistics.\n\n-click on a pokémon\'s card to view a more in depth page about its details,
        statistics, evolutions, and alternate forms.\n\n-on a pokémon\'s page, click the pokémon\'s
        image to view a larger version of the official art.\n\n-click on any pokémon\'s evolution or
        alternate form to navigate to that form\'s information page.\n\n-please let the dev know
        about any bugs you encounter by posting on the play store!</string>


    <!--    Stats string resources-->
    <string name="hp_stat_sort">hp:\n%d</string>
    <string name="hp_stat">hp: %d</string>
    <string name="attack_stat_short">atk:\n%d</string>
    <string name="attack_stat">attack: %d</string>
    <string name="defense_stat_short">def:\n%d</string>
    <string name="defense_stat">defense: %d</string>
    <string name="special_attack_stat_short">s. atk:\n%d</string>
    <string name="special_attack_stat">special attack: %d</string>
    <string name="special_defense_stat_short">s. def:\n%d</string>
    <string name="special_defense_stat">sp. defense: %d</string>
    <string name="speed_stat_short">speed:\n%d</string>
    <string name="speed_stat">speed: %d</string>
    <string name="total_stats_short">total:\n%d</string>
    <string name="total_stats">total: %d</string>
    <string name="stat_percent">%s%%</string>
    <string name="height">HEIGHT: %s m</string>
    <string name="weight">WEIGHT: %s kg</string>

    <!--    Evolution Data string resources-->
    <!--    try type f for int-->
    <string name="evolves_from">evolves from:\n%s</string>
    <string name="baby">baby pokémon\n</string>
    <string name="no_evolution">no prior evolution</string>
    <string name="gender_female">gender:\nfemale\n</string>
    <string name="gender_male">gender:\nmale\n</string>
    <string name="genderless">gender:\ngenderless\n</string>
    <string name="held_item">held item:\n%s\n</string>
    <string name="item">item:\n%s\n</string>
    <string name="know_move">know move:\n%s\n</string>
    <string name="know_move_type">know move type:\n%s\n</string>
    <string name="location">location:\n%s\n</string>
    <string name="min_affection">min. affection:\n%d\n</string>
    <string name="min_beauty">min. beauty:\n%d\n</string>
    <string name="min_happiness">min. happiness:\n%d\n</string>
    <string name="min_level">min. level:\n%d\n</string>
    <string name="needs_rain">while raining\n</string>
    <string name="party_species">in party:\n%s\n</string>
    <string name="party_type">party type:\n%s\n</string>
    <string name="attack_greater_defense">attack &gt; defense\n</string>
    <string name="attack_equal_defense">attack = defense\n</string>
    <string name="attack_less_defense">attack &lt; defense\n</string>
    <string name="time">time:\n%s\n</string>
    <string name="trade">trade:\n%s\n</string>
    <string name="upside_down">turn upside-down\n</string>

    <string name="alternate_forms">alternate forms:</string>
    <string name="background_image">Background image</string>
    <string name="type_image">type image</string>

    <!--    Fragment Headers-->
    <string name="dex_header">NATIONAL DEX</string>
    <string name="pokemon_info">POKÉMON INFORMATION</string>
    <string name="app_info">APP INFORMATION</string>

</resources>
